--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.2.4",
+    "@mui/styled-engine-sc": "^5.1.0",
     "create-react-app": "^4.0.3",
-    "node": "^17.2.0"
+    "material-ui-icons": "^1.0.0-beta.36",
+    "node": "^17.2.0",
+    "styled-components": "^5.3.3"
   }
 }
